# simple-restaurant-api-with-rust

./: Cargo.toml  README.md  Simple Restaurant API Tests Simultaneous Requests.postman_collection.json  Simple Restaurant API Tests Single Requests.postman_collection.json  Simple Restaurant API Tests.postman_collection
src/: handler.rs  main.rs  model.rs  response.rs
