[package]
name = "simple-restaurant-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
